# astrology-saas

./: .env  Cargo.toml  README.md  cloudbuild.yaml  deploy.sh  diesel.toml  index.html  webhook-config.json
assets/: index-DRbUZnoe.js
astrology-backend/: Cargo.toml
astrology-backend/src/: main.rs
backend/: main.py
frontend/: package-lock.json  package.json  vite.config.js  vite.config.ts
